--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="shortcut icon"
       href="./src/assets/favicon.svg"
       type="image/svg+xml" />
-    <title>Phoenix - chat to supercharge your ideas</title>
+    <title>Xnote - chat to supercharge your ideas</title>
 
     <!-- 
      - Google font link
